2004-02-10  Andras Varga 

	* cexception.cc: added storage of module class name (NED type name)

2004-02-09  Andras Varga 

	* ctypes.cc: added methods to cModuleInterface so that it's possible
	to dynamically assemble it (needed by networkbuilder)

2004-02-07  Andras Varga 

	* ctypes.cc: added createOneIfClassIsKnown(const char *classname)

	* cstruct.cc: fix createDescriptorFor() to prepare for missing 
	descriptor object

2004-02-06  Andras Varga

	* cgate.cc: implemented cGate::disconnect(); revised cGate::connectTo()

	* cchannel.cc: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cmodule.cc: implemented bubble()

2004-01-05  Andras Varga

	* HEAVY CHANGES throughout the code, see include/ChangeLog entry with
	same date.

	* cDisplayStringParser:
	- cDisplayStringParser renamed to cDisplayString
	- backslash parsing improved (now recognizes backslash sequences 
	  \t, \n, \r, \f, \b, \x0A with same meaning as in C/C++)
	- notify() and assemble() only if needed (there is some change)

2003-11-30  Andras Varga

	* all files: info() no longer contains object name and class

2003-11-22  Andras Varga

	* carray.cc: fixed bug in cBag which caused crash under certain rare
	circumstances [reported by Nicolas Betbeder-Matibet]

2003-11-13  Andras Varga

	* distrib.cc: added typecast for MSVC 7.0 compiler [reported by Bob
	Scheffler]

2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-04-20  Andras Varga
	* cmodule.cc: setGateSize(): added check for negative vector size

	2003-03-30  Andras Varga
	* Makefile.vc uses implicit rules

	2003-03-25  Andras Varga
	* cmodule.cc: method isSimple() moved to base class cModule where it
	uses dynamic_cast.
	* ctypes.cc: cModuleType::create() methods reorganized (see
	include/ChangeLog)

	2003-03-23  Andras Varga